# blobseer

./: CMakeLists.txt
bindings/: CMakeLists.txt
bindings/blob-mpi/: BFS_interface-c.cpp  BFS_interface-c.h  BFS_interface.cpp  BFS_interface.hpp  CMakeLists.txt  test.c  test.cfg
contrib/DistributedRNGEnvironment/Clients/DumpBlob/: CMakeLists.txt  dump_blob.cpp
contrib/DistributedRNGEnvironment/Clients/EgdClientBS/: CMakeLists.txt  deploy_clients.sh  egdBS.cpp  start_client.sh
contrib/DistributedRNGEnvironment/Clients/HavegeBS/: CMakeLists.txt  deploy_clients.sh  havegeBS.cpp  start_client.sh
contrib/DistributedRNGEnvironment/Clients/HavegeBS/Havege2.0/: CCOPTCORE2  CCOPTITANIUM  CCOPTUII  CCOPTUIII  CMakeLists.txt  ChangeLog  Copyright.h  HAVEGE2.0.c  HAVEGE2.0.h  HardClockATHLON.s  HardClockCORE2.s  HardClockG4.s  HardClockITANIUM.s  HardClockUII.s  HardClockUIII.s  HardClockWin.s  HardTick.c  HavegeInline.h  LoopBody.h  Makefile  Makefile.ATHLON  Makefile.CORE2  Makefile.P4  Makefile.PIII  OneIteration.h  PackTest.c  PersoArchHAVEGE2.0.h  README  cephes-protos.h  cephes.c  matrix.c
contrib/DistributedRNGEnvironment/Clients/RandomBS/: CMakeLists.txt  deploy_clients.sh  randomBS.cpp  start_client.sh
contrib/DistributedRNGEnvironment/Tools/RandomBoost/: CMakeLists.txt  randomBoost.cpp
contrib/NamespaceManager/: CMakeLists.txt  README
contrib/NamespaceManager/FBlobseerClient/: FileHandler.cpp  FileHandler.hpp  NamespaceClient.cpp  NamespaceClient.hpp
contrib/NamespaceManager/FBlobseerClient/bindings/java/: CMakeLists.txt  FileHandlerJNI.cpp  NamespaceClientJNI.cpp
contrib/NamespaceManager/FBlobseerClient/bindings/python/: CMakeLists.txt  FileHandlerWrapper.cpp  FileHandlerWrapper.hpp  NamespaceClientWrapper.cpp  NamespaceClientWrapper.hpp  fblobseer_py.cpp
contrib/NamespaceManager/FBlobseerClient/clib/: FileHandlerC.cpp  FileHandlerC.h  NamespaceClientC.cpp  NamespaceClientC.h
contrib/NamespaceManager/cmake/Modules/: FindFBlobseer.cmake  FindJAVA.cmake  FindPython.cmake
contrib/NamespaceManager/common/: ClientRequest.cpp  ClientRequest.hpp  FileMetadata.cpp  FileMetadata.hpp  NamespaceManConstants.hpp  Reply.cpp  Reply.hpp
contrib/NamespaceManager/conf/: blobseer-test.cfg
contrib/NamespaceManager/lib/: CMakeLists.txt
contrib/NamespaceManager/namespaceMan/: CMakeLists.txt  NamespaceManager.cpp  NamespaceManager.hpp
contrib/NamespaceManager/namespaceMan/storage/: NamespaceSimpleStorage.cpp  NamespaceSimpleStorage.hpp
contrib/NamespaceManager/test/: CMakeLists.txt  testFBlobseer.cpp  testFBlobseer.hpp
contrib/NamespaceManager/test/test_clib/: testFBlobseer.c
contrib/monitoringBlobSeer/BSmonSupport/BSmonSupport-0.3.1/providerMon/: CMakeLists.txt  README
contrib/monitoringBlobSeer/BSmonSupport/BSmonSupport-0.3.1/vmanagerParser/: CMakeLists.txt  README
contrib/monitoringBlobSeer/BSmonSupport/BSmonSupport-0.3.3/: CMakeLists.txt  README
contrib/monitoringBlobSeer/BSmonSupport/BSmonSupport-0.3.3/conf/: apMonSupport.cfg
contrib/monitoringBlobSeer/BSmonSupport/BSmonSupport-0.3.3/mon_utils/: formatting_utils.hpp  time_utils.hpp
contrib/monitoringBlobSeer/BSmonSupport/BSmonSupport-0.3.3/pmanager/: CMakeLists.txt  adv_manager.cpp  pmanager_mon_listener.cpp  pmanager_mon_listener.hpp
contrib/monitoringBlobSeer/BSmonSupport/BSmonSupport-0.3.3/provider/: metadata_mon_listener.cpp  metadata_mon_listener.hpp  page_manager.hpp  provider.cpp  provider_mon_listener.cpp  provider_mon_listener.hpp  sdht.cpp
contrib/monitoringBlobSeer/BSmonSupport/BSmonSupport-0.3.3/vmanager/: VManagerCAV.java
contrib/monitoringBlobSeer/BSmonSupport/BSmonSupport-0.3.4/provider/: CMakeLists.txt  metadata_mon_listener.cpp  metadata_mon_listener.hpp  page_manager.hpp  provider.cpp  provider.hpp  provider_mon_listener.cpp  provider_mon_listener.hpp  sdht.cpp
contrib/monitoringBlobSeer/BSmonSupport/BSmonSupport-0.3.4/vmanager/: CMakeLists.txt  VManagerMonitor.java
contrib/monitoringBlobSeer/DataVisualization/: CMakeLists.txt  README
contrib/monitoringBlobSeer/DataVisualization/cmake/Modules/: FindRepos.cmake
contrib/monitoringBlobSeer/DataVisualization/conf/: App.properties  menu.js  web.xml
contrib/monitoringBlobSeer/DataVisualization/conf/website_conf/: UsedMem.properties  UserCPU.properties  eth_in.properties
contrib/monitoringBlobSeer/DataVisualization/html/: NumberOfWritesPerClient.jsp  blob_io_over_page.jsp  blob_io_over_provider.jsp  blob_io_sortby_provider.jsp  blob_io_sortby_provider_select.jsp  blob_storage_over_version_bar.jsp  blob_storage_over_version_bar_select.jsp  blob_storage_over_version_stackedBar.jsp  blob_storage_over_version_stackedBar_select.jsp  blob_storage_over_version_stackedXYArea.jsp  blob_storage_over_version_stackedXYArea_select.jsp  blob_version_over_page.jsp  blob_version_over_page_select.jsp  io_over_blob.jsp  io_over_blob_select.jsp  memory_stackedXYArea.jsp  most_accessed_page.jsp  most_accessed_page_select.jsp  no_of_access_per_version.jsp  no_of_access_per_version_select.jsp  provider_storage_for_specific_blob.jsp  provider_storage_for_specific_blob_select.jsp  provider_storage_over_blob.jsp  provider_storage_over_blob_select.jsp  system_storage.jsp  system_storage_select.jsp
contrib/monitoringBlobSeer/PolicyMatching/: CMakeLists.txt
contrib/monitoringBlobSeer/PolicyMatching/cmake/Modules/: FindLibs.cmake
contrib/monitoringBlobSeer/PolicyMatching/config/: AppDb.properties  BSPolicyGenConf
contrib/monitoringBlobSeer/PolicyMatching/generatedPolicies/policyDir/: securityPolicy_1_44.xml  securityPolicy_1_45.xml
contrib/monitoringBlobSeer/PolicyMatching/generatedPolicies/serDir/: securityPolicy_1_44.ser  securityPolicy_1_45.ser
contrib/monitoringBlobSeer/UserAccounting/MaliciousClients/: CMakeLists.txt  README
contrib/monitoringBlobSeer/UserAccounting/proxy/: CMakeLists.txt  README  repServer.java
contrib/monitoringBlobSeer/UserAccounting/testClients/: CMakeLists.txt  README
contrib/monitoringBlobSeer/monitoringDB/: CMakeLists.txt  README
contrib/monitoringBlobSeer/monitoringDB/conf/: nodeFile.txt
(+1026 files in other folders)
